--- a/index.html
+++ b/index.html
@@ -343,16 +343,16 @@
         <br><br>
        <button onclick="location.href='/pair'" class="button">PAIR CODE</button>
         <br><br>
-      <button onclick="location.href='https://heroku.com/deploy?template=https://github.com/MrMasterOfc/MASTER-MD'" class="button">Deploy</button>
+      <button onclick="location.href='https://dashboard.heroku.com/new-app?template=https://github.com/Lokunima2001/LOKU-NIMA-MD-GIT'" class="button">Deploy</button>
         <br><br>
-            <button onclick="location.href='https://wa.me/+94720797915'" class="button">OWNER</button>
+            <button onclick="location.href='https://wa.me/94769091078?text=*@_Hi_NIMAH_BOT_DPLOY_ME_🚀🤖*'" class="button">OWNER</button>
        <br><br>
-       <button onclick="location.href='https://whatsapp.com/channel/0029VaWWZa1G3R3c4TPADo0M'" class="button">WHATSAPP CHANNEL</button>
+       <button onclick="location.href='https://whatsapp.com/channel/0029VazajdIIt5rrYdTBSc0P'" class="button">WHATSAPP CHANNEL</button>
          <br><br>
-        <button onclick="location.href='https://github.com/MrSahanOfcSL'" class="button">GITHUB</button>
+        <button onclick="location.href='https://github.com/Lokunima2001/LOKU-NIMA-MD-GIT'" class="button">GITHUB</button>
        <br><br>
     </form>
-      <button onclick="location.href='www.youtube.com/@sahanmaduwantha2006'" class="button">YOUTUBE</button>
+      <button onclick="location.href='https://youtube.com/@nimayt-i7y?si=aTXBSHLzCCO0xgzq'" class="button">YOUTUBE</button>
     </div>
     <footer>
        <p>© MASTER MD WHATSAPP USER BOT</p>
