--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MASTER MD | Session</title>
-    <meta property="og:image" content="https://i.imgur.com/HQ8CENR.jpeg">
-    <meta property="og:title" content="Queen Izumi">
+    <title>NIMA MD | Session</title>
+    <meta property="og:image" content="https://files.catbox.moe/zqoycp.jpg">
+    <meta property="og:title" content="NIMA MD">
 <style>
   body {
    display: flex;
@@ -329,7 +329,7 @@
       <h1 class="h">
         <centre>
         <span>SELECT <span>
-          <span>MASTER <span>
+          <span>NIMA <span>
                 <span>MD <span>
                  <span>INFO<span>
                 </centre>
@@ -355,7 +355,7 @@
       <button onclick="location.href='https://youtube.com/@nimayt-i7y?si=aTXBSHLzCCO0xgzq'" class="button">YOUTUBE</button>
     </div>
     <footer>
-       <p>© MASTER MD WHATSAPP USER BOT</p>
+       <p>© NIMA-MD 1V WHATSAPP USER BOT</p>
     </footer>
   </body>
   </html>
